[gd_scene load_steps=9 format=3 uid="uid://ddi8j3e2qifws"]

[ext_resource type="Script" uid="uid://bafk1i78217fx" path="res://cards/BaseCard.gd" id="1_5crtc"]
[ext_resource type="Texture2D" uid="uid://dn00wae1rpmih" path="res://cards/assets/card_blank.png" id="2_fbsta"]
[ext_resource type="Texture2D" uid="uid://d1ir4pp7lbd0j" path="res://cards/assets/card_background_alt.png" id="3_cr6ah"]
[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="4_7tv7l"]
[ext_resource type="FontFile" uid="uid://dykq5v23q0j50" path="res://assets/fonts/BarlowCondensed-Medium.ttf" id="5_cr6ah"]
[ext_resource type="Texture2D" uid="uid://dqas1fsdtb3ra" path="res://cards/assets/suits/Clubs64.png" id="5_kfaqa"]
[ext_resource type="Texture2D" uid="uid://8eeotvfnl8er" path="res://cards/assets/card_border.png" id="6_q8opy"]
[ext_resource type="Texture2D" uid="uid://cu2af88jsh05r" path="res://cards/assets/card_back.png" id="7_1s4ic"]

[node name="BaseCard" type="Node2D" node_paths=PackedStringArray("CardBack", "RankLabelUpright", "SuitIconUpright", "RankLabelReversed", "SuitIconReversed", "StatusIconLarge", "StatusIconSmall", "StatusLabel")]
script = ExtResource("1_5crtc")
CardBack = NodePath("CardBack")
RankLabelUpright = NodePath("Control/Upright/RankLabelUpright")
SuitIconUpright = NodePath("Control/Upright/SuitIconUpright")
RankLabelReversed = NodePath("Control/Reversed/RankLabelReversed")
SuitIconReversed = NodePath("Control/Reversed/SuitIconReversed")
StatusIconLarge = NodePath("Control/Status/LargeIcon")
StatusIconSmall = NodePath("Control/Status/SmallIcon")
StatusLabel = NodePath("Control/Status/StatusLabel")

[node name="Card" type="TextureRect" parent="."]
modulate = Color(0.145098, 0.14902, 0.266667, 1)
custom_minimum_size = Vector2(140, 190)
offset_left = -70.0
offset_top = -95.0
offset_right = 70.0
offset_bottom = 95.0
pivot_offset = Vector2(70, 95)
texture = ExtResource("2_fbsta")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(140, 190)
offset_left = -70.0
offset_top = -95.0
offset_right = 70.0
offset_bottom = 95.0
pivot_offset = Vector2(70, 95)
texture = ExtResource("3_cr6ah")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(140, 190)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_7tv7l")

[node name="Status" type="Control" parent="Control"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchor_left = 0.157143
anchor_top = 0.247368
anchor_right = 0.842857
anchor_bottom = 0.752632
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="LargeIcon" type="TextureRect" parent="Control/Status"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 5

[node name="SmallIcon" type="TextureRect" parent="Control/Status"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="Control/Status"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0745098, 0.0901961, 0.137255, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_cr6ah")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upright" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RankLabelUpright" type="Label" parent="Control/Upright"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0258621
anchor_top = -0.0843373
anchor_right = 0.12069
anchor_bottom = 0.150602
theme_override_font_sizes/font_size = 32
text = "a"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="SuitIconUpright" type="TextureRect" parent="Control/Upright"]
layout_mode = 0
anchor_left = -0.103448
anchor_top = 0.126506
anchor_right = 0.189655
anchor_bottom = 0.301205
mouse_filter = 2
texture = ExtResource("5_kfaqa")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Reversed" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(58, 83)
mouse_filter = 2

[node name="RankLabelReversed" type="Label" parent="Control/Reversed"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0258621
anchor_top = -0.0843373
anchor_right = 0.12069
anchor_bottom = 0.150602
theme_override_font_sizes/font_size = 32
text = "a"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="SuitIconReversed" type="TextureRect" parent="Control/Reversed"]
layout_mode = 0
anchor_left = -0.103448
anchor_top = 0.126506
anchor_right = 0.189655
anchor_bottom = 0.301205
mouse_filter = 2
texture = ExtResource("5_kfaqa")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Border" type="TextureRect" parent="."]
custom_minimum_size = Vector2(140, 190)
offset_left = -70.0
offset_top = -95.0
offset_right = 70.0
offset_bottom = 95.0
pivot_offset = Vector2(70, 95)
mouse_filter = 2
texture = ExtResource("6_q8opy")

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("7_1s4ic")

[connection signal="gui_input" from="Background" to="." method="on_mouse_clicked"]
[connection signal="mouse_entered" from="Background" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="on_mouse_exited"]
